# pytest-mpl

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASING.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
.continuous-integration/: README.md
.continuous-integration/travis/: setup_environment_linux.sh  setup_environment_osx.sh
.github/: dependabot.yml  release.yml
.github/workflows/: codeql.yml  docs.yml  python-package.yml  release.yml  test_and_publish.yml  update-changelog.yaml
docs/: conf.py  configuration.rst  hash_mode.rst  hybrid_mode.rst  image_mode.rst  index.rst  installing.rst  sample_summaries.py  sidebar.py  summaries.rst  usage.rst
docs/_templates/: mpl_third_party_sidebar.html
latest/: configuration.html  genindex.html  index.html  installing.html  objects.inv  py-modindex.html  search.html  searchindex.js  summaries.html  usage.html
latest/_sources/: configuration.rst.txt
latest/_static/: documentation_options.js
latest/_static/css/: style.css
latest/sample/test_basic_html/: fig_comparison_basic.html  results.json
latest/sample/test_html/: fig_comparison.html  results.json
latest/sample/test_html_generate/: fig_comparison.html  results.json
latest/sample/test_html_generate_hashes_only/: fig_comparison.html  results.json  test_hashes.json
latest/sample/test_html_generate_images_only/: fig_comparison.html  results.json
latest/sample/test_html_hashes_only/: fig_comparison.html  mpl35_ft261.json  results.json
latest/sample/test_html_images_only/: fig_comparison.html  results.json
latest/sample/test_html_run_generate_hashes_only/: fig_comparison.html
pytest_mpl/: __init__.py  classic.mplstyle  kernels.py  plugin.py  utils.py
pytest_mpl/summary/: html.py
pytest_mpl/summary/templates/: base.html  basic.html  extra.js  filter.html  navbar.html  result.html  result_badge.html  result_badge_icon.html  result_diffimage.html  result_images.html  styles.css
tests/: conftest.py  helpers.py  test_baseline_path.py  test_default_backend.py  test_default_style.py  test_default_tolerance.py  test_deterministic.py  test_generate.py  test_generate_summary.py  test_hash_library.py  test_kernels.py  test_pytest_mpl.py  test_results_always.py  test_results_path.py  test_use_full_name.py  test_use_full_test_name.py
tests/baseline/: test_hash_lib.json
tests/baseline/2.0.x/: test_format_eps.eps  test_hash_lib.json
tests/baseline/hashes/: mpl15.json  mpl20.json  mpl20_ft2104.json  mpl20_ft261.json  mpl21.json  mpl21_ft261.json  mpl22.json  mpl22_ft261.json  mpl30.json  mpl30_ft2104.json  mpl30_ft261.json  mpl310_ft261.json  mpl31_ft261.json  mpl32_ft261.json  mpl33_ft261.json  mpl34_ft261.json  mpl35_ft261.json  mpl36_ft261.json  mpl37_ft261.json  mpl38_ft261.json  mpl39_ft261.json  test_phash.json  test_phash_bad_kernel.json  test_phash_missing_hash_size.json  test_phash_missing_high_freq_factor.json  test_phash_missing_name.json
tests/subtests/: README.rst  helpers.py  subtest.py  test_subtest.py
tests/subtests/hashes/: mpl33_ft261.json  mpl34_ft261.json  mpl35_ft261.json
tests/subtests/result_hashes/: mpl33_ft261.json  mpl34_ft261.json  mpl35_ft261.json  mpl38_ft261.json
tests/subtests/subtest/: helpers.py  pytest.ini  test_classes.py  test_functions.py  test_special.py  test_unittest.py
tests/subtests/subtest/hashes/: mpl33_ft261.json  mpl37_ft261.json
tests/subtests/summaries/: test_default.json  test_generate.json  test_generate_hashes_only.json  test_generate_images_only.json  test_hash.json  test_html_generate.json  test_html_generate_hashes_only.json  test_html_generate_images_only.json  test_html_hashes_only.json  test_html_images_only.json  test_hybrid.json  test_results_always.json
