[metadata]
license_file = LICENSE
name = pytest-mpl
version = 0.11
url = https://github.com/matplotlib/pytest-mpl
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD
description = pytest plugin to help with testing figures output from Matplotlib
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
# Note that we don't include Matplotlib as a required dependency since it is only
# required if the plugin is actually used, in which case the package using this
# will already need to have Matplotlib declared as a dependency. We want to avoid
# installing Matplotlib unecessarily.
install_requires =
    pytest
    matplotlib

[options.entry_points]
pytest11 =
    pytest_mpl = pytest_mpl.plugin

[options.extras_require]
test =
    pytest-cov

[tool:pytest]
testpaths = "tests"
