[metadata]
license_file = LICENSE
name = pytest-mpl
version = 0.12
url = https://github.com/matplotlib/pytest-mpl
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD
description = pytest plugin to help with testing figures output from Matplotlib
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
install_requires =
    pytest
    matplotlib

[options.entry_points]
pytest11 =
    pytest_mpl = pytest_mpl.plugin

[options.extras_require]
test =
    pytest-cov

[tool:pytest]
testpaths = "tests"

[flake8]
max-line-length = 100
ignore = W504

[pycodestyle]
max_line_length = 100

[isort]
balanced_wrapping = True
length_sort = False
length_sort_sections = stdlib
line_length = 100
