[metadata]
license_file = LICENSE
name = pytest-mpl
url = https://github.com/matplotlib/pytest-mpl
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD
description = pytest plugin to help with testing figures output from Matplotlib
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pytest
    matplotlib
    importlib_resources;python_version<'3.8'
    packaging
    Jinja2
    Pillow

[options.entry_points]
pytest11 =
    pytest_mpl = pytest_mpl.plugin

[options.extras_require]
test =
    pytest-cov

[tool:pytest]
testpaths = "tests"
markers =
    image: run test during image comparison only mode.
    hash: run test during hash comparison only mode.
filterwarnings =
    error
    ignore:distutils Version classes are deprecated
    ignore:the imp module is deprecated in favour of importlib

[flake8]
max-line-length = 100
ignore = W504

[pycodestyle]
max_line_length = 100

[isort]
balanced_wrapping = True
length_sort = False
length_sort_sections = stdlib
line_length = 100
